[package]
name = "frac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
func = { version = "0.1.0", path = "../func" }
param = { version = "0.1.0", path = "../param" }
base = { version = "0.1.0", path = "../base" }
iced = "0.10.0"
image = "0.24.7"
threadpool = "1.8.1"
chrono = "0.4.28"
