[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["image", "canvas", "advanced", "smol"] }
base = { version = "0.1.0", path = "../base" }
param = { version = "0.1.0", path = "../param" }
frac = { version = "0.1.0", path = "../frac" }
cli-clipboard = "0.4.0"
# env_logger = "0.10.0"
