[package]
name = "viewer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
func = { version = "0.2.0", path = "../func" }
base = { version = "0.2.0", path = "../base" }
param = { version = "0.2.0", path = "../param" }
frac = { version = "0.2.0", path = "../frac" }
eframe = "0.22.0"
cli-clipboard = "0.4.0"
